<resources>
    <string name="app_name">Staff Manager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="there_are_a_problem_signing_in">There are a problem signing in</string>
    <string name="login_successful">Login successful</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">User</string>
    <string name="nav_header_subtitle" translatable="false">user@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="your_message">Your Message</string>
    <string name="staff_list">Staff List</string>
    <string name="hello_world">hello world</string>
    <string name="please_login_again">Please Login again</string>
    <string name="full_name">Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="position_in_company">Position in company</string>
    <string name="add_new_member">Add new nember:</string>
    <string name="password">Password</string>
    <string name="add_new_member_complete">Add new member complete!</string>
    <string name="have_a_problem_with_create_new_account_member">Have a problem with create new account member!</string>
    <string name="create_new_account_member_complete">Create new account member complete!</string>
    <string name="change_language">Change Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="input_email_your_friend">Input email your friend</string>
    <string name="add_new_friend">Add New Friend</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel!</string>
    <string name="msg_token_fmt" translatable="false"> </string>
    <string name="default_notification_channel_id" translatable="false">123</string>
    <string name="your_title_task">Your title task</string>
    <string name="title">Title</string>
    <string name="content_task">Content task</string>
    <string name="add_new_task">Add new task</string>
    <string name="add_new_task_succesful">Add new task succesful!</string>
    <string name="have_a_problem_to_add_new_task">Have a problem to add new task, please check your internet and try again</string>
    <string name="change_password">Change Password</string>
    <string name="send">Send</string>
    <string name="have_a_problem_with_reset_password">Have a problem with reset password!</string>
    <string name="channel_name" translatable="false">quan_ly_nhan_vien</string>
    <string name="channel_description" translatable="false">channel_description</string>
    <string name="input_your_password">Input your password</string>
    <string name="input_new_password">Input new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change">Change</string>
    <string name="can_not_change_password">Could\'t change password, Check your internet connect!</string>
    <string name="update_user_successful">Update user successful!</string>
    <string name="error_password_not_update">Error password not update</string>
    <string name="ask_for_a_day_off">Ask For A Day Off</string>
    <string name="chose_a_day_you_off">Chose a day you off:</string>
    <string name="input_your_content">Input your content</string>
    <string name="request_list">Request List</string>
    <string name="number_off_days">Number off days: </string>
    <string name="accepted">Accepted:</string>
    <string name="denied">Denied: </string>
    <string name="account_login">Account Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="delete_this_account">Delete this account!</string>
    <string name="are_you_sure_delete_this_account">Are you sure delete this account, can not restore when you choose OK</string>
    <string name="my_info">My Info</string>
    <string name="friend_list">Friends List</string>
    <string name="tasks">Tasks</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="content">Content</string>
    <string name="choose_start_day_off">Choose start day off</string>
    <string name="date_type">Date type</string>
    <string name="loading">Loading...</string>
    <string name="can_not_upload_image">Can\'t upload image!</string>
    <string name="not_allowed_before_today">Not allowed before today!</string>
    <string name="msg_subscribed">successful</string>
    <string name="msg_subscribe_failed">failed</string>
    <string name="off_urgent_busy">Urgent Busy</string>
    <string name="off_sick">Sick</string>
    <string name="off_accident">Accident</string>
    <string name="off_married">Married</string>
    <string name="off_married_children">Married Children</string>
    <string name="choose_end_day_off">Choose end day off</string>
    <string name="off_obsequies">Obsequies</string>
    <string name="off_birth">Birth</string>
    <string name="off_wife_gives_birth_by_surgery">Wifi gives birth by surgery</string>
    <string name="off_wife_gives_birth_normal">Wife gives birth normal</string>
    <string name="off_wife_gives_birth_under_32_weeks_old">Wife gives birth under 32 weeks old</string>
    <string name="off_wife_gives_birth_twins">Wifi gives birth twins</string>
    <string name="off_wife_gives_birth_twins_by_surgery">Wife gives birth twins by surgery</string>
    <string name="more_than">More than </string>
    <string name="less_than">Less than </string>
    <string name="days"> days</string>
    <string name="send_request_successful">Send Request Off Successful!</string>
    <string name="fail_send_request_off">Fail send request off!</string>
    <string name="request_for_off_days">Request For Off Days</string>
    <string name="start_date_off">Start date off</string>
    <string name="off_type">Off type</string>
    <string name="reason">Reason:</string>
    <string name="note">Note:</string>
    <string name="accept">Accept</string>
    <string name="reply">Reply</string>
    <string name="denied_user_off">Denied user off!</string>
    <string name="end_date_off">End date off</string>
    <string name="email">Email:</string>
    <string name="you_can_off">You can off  days</string>
    <string name="date_format_day_month_year">dd-MM-yyyy</string>
</resources>
