<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_vertical"
    android:id="@+id/linear_content"
    android:layout_alignParentTop="true"
    android:layout_above="@id/linear_button"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_title_task"
        android:layout_marginStart="@dimen/margin_vertical"
        />
    <EditText
        android:id="@+id/input_title_task_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/title"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_task"
        android:layout_marginStart="@dimen/margin_vertical"
        android:layout_marginTop="@dimen/margin_top_content_task"
        />
    <EditText
        android:id="@+id/input_content_task_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linear_button"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <Button
            android:id="@+id/btn_cancel_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="@dimen/margin_vertical"
            />
        <Button
            android:id="@+id/btn_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_margin="@dimen/margin_vertical"
            android:enabled="false"
            />
    </LinearLayout>
</RelativeLayout>