<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.RequestDetailActivity"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/request_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Trần Đức Luân"
            android:gravity="center"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="@dimen/margin_item">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/request_detail_off_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/off_type"
                android:editable="false"
                />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="@dimen/margin_item"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/request_detail_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date_off"
                    android:editable="false"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="@dimen/margin_item"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/request_detail_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date_off"
                    android:editable="false"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="@dimen/margin_item">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/request_detail_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reason"
                android:editable="false"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_item"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/margin_item"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:textStyle="bold"
                    />
                <CheckBox
                    android:id="@+id/request_detail_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/request_detail_note"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:hint="@string/note"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            >
            <android.support.design.button.MaterialButton
                android:id="@+id/request_detail_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_5sdp"
                android:text="@string/cancel"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_margin="@dimen/margin_item"
                />
            <android.support.design.button.MaterialButton
                android:id="@+id/request_detail_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_5sdp"
                android:text="@string/reply"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_margin="@dimen/margin_item"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
